* Only set paper to Manual if not applying profile
* Update OCR view switching between pages with and without OCR output
* xz compress log file if xz available
* Fix bug applying paper after profile set SANE_INFO_INEXACT
* When saving current settings as new profile, actually set the profile
* If a device throws an error when opening it, add it to a session blacklist
* Update to Hungarian translation (thanks to csola)


2.5.4 (20.06.2019):

* Fix bug applying paper whilst setting profile
* Fix canvas usage in scan dialog.
* Allow tabs to be scrolled to reduce width of scan dialog.
* Restore split screen view for image and OCR output.
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Swedish translation (thanks to Anders Jonsson)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.5.3 (20.05.2019):

* Split up messages from gimp and unpaper to allow them to be ignored more
  easily. Closes bug #321
  (Error messages when returning from editing a scanned document using gimp)
* Trap invalid dates in metadata.
  Closes bug #323 (Crash when saving with invalid date)
* Use GTK's FontChooserDialog for selecting font for OCR output in PDF
* Moved font discovery to program start to accelerate display of save dialog
* Removed owner password, as it does not encrypt.
* Don't reset to defaults if no scan options set. Closes bug #324 (Changing scan
  resolution from the default 100 ppi to 200 ppi creates invalid syntax for sane
  parameters)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Italian translation (thanks to Albano Battistella)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.5.2 (22.04.2019):

* Allow translations for message types in multiple message window
* Improve progress message whilst analysing pages
* Don't reapply scan options after reload if setting returned SANE_INFO_INEXACT
* Decode UTF-8 in font names for PDFs in save dialog