@@ -174,6 +174,7 @@ t/06092_Dialog_Scan.t
 t/06093_Dialog_Scan.t
 t/06094_Dialog_Scan.t
 t/06095_Dialog_Scan.t
+t/06096_Dialog_Scan.t
 t/0609_Dialog_Scan.t
 t/0610_Dialog_Scan_Image_Sane.t
 t/0611_Dialog_Scan_Image_Sane.t
